IN PROGRESS - BATCH-907: Integer support in ExecutionContext
added int support to EC